# docs/swagger.json
@@ -30,30 +30,12 @@
                 "summary": "Create account",
                 "parameters": [
                     {
-                        "description": "user email",
-                        "name": "email",
+                        "description": "user email, name, password",
+                        "name": "Payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "user name",
-                        "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "user password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.signupPayload"
                         }
                     }
                 ],
@@ -88,6 +70,12 @@
                             "$ref": "#/definitions/structs.ResponseBody"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ResponseBody"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -99,6 +87,20 @@
         }
     },
     "definitions": {
+        "controllers.signupPayload": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
